--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="flex justify-center mt-6">
-            <p class="text-black font-semibold">Linktree</p>
+            <p class="text-black font-semibold">UI Landing Made By Om Gautam</p>
             <img src="https://storage.googleapis.com/a1aa/image/hgsTQYmCaUpx3w8NNI8nr_ZfXxBSXaqepP8qVGHlI-U.jpg" alt="Linktree logo" class="ml-1" width="20" height="20">
         </div>
     </div>
