--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     </a>
                 </div>
                 <div class="bg-white rounded-lg shadow p-4 flex justify-between items-center">
-                    <a href="https://aiartwork.netlify.app/" class="flex items-center space-x-2 text-blue-600 hover:text-blue-800">
+                    <a href="https://texttranslationapp.netlify.app/" class="flex items-center space-x-2 text-blue-600 hover:text-blue-800">
                         <span>English To Hindi Translate</span>
                         <i class="fas fa-external-link-alt"></i>
                     </a>
